# MIS300-VizDoom

./: .dockerignore  .gitignore  Dockerfile  README.md  _vizdoom.ini  docker-compose.yml  main.py  pyproject.toml  quick_test.py  requirements.txt
.github/workflows/: smoke-custom-train.yml
docs/: Bilibili 直播间实时弹幕分析.docx  VizDoom-FPS-Agent.md  defend_center_v4_6.md  defend_center_v4_7.md  defend_center_v4_8_light.md  uv_poetry_compat.md  wrappers_update.md
docs/dev/: PoC-Spec.md  custom_training_guide.md  frontformatter_debug.md  progress_vizdoom_setup.md  troubleshooting_pytorch_2.6.md  uv_poetry_migration.md  wad_path_fix.md
scripts/: check_deps.py  codemix.py  export-requirements.ps1  export-requirements.sh  install.ps1  install.sh  smoke_custom_train.ps1  smoke_custom_train.sh  test_render.py
src/: check_vars.py  convert_checkpoint.py  debug_vision.py  evaluate.py  run_enjoy_safe.py  test_custom_env.py  test_custom_env_v2.py  test_model_v2.py  test_new_wrappers.py  test_vizdoom_env.py  train_custom.py  train_simple.py
src/_vizdoom/: defend_the_center.cfg
src/envs/: __init__.py  vizdoom_env.py  wrappers.py
src/models/: __init__.py  custom_model.py
